# KernelFileHider

./: .gitignore  Cargo.toml  build.rs
kernel/: Makefile  build_and_install_module.sh  collector.c
proto/: commands.proto  response.proto
src/: lib.rs
src/collector/: collector.rs  kernel.rs
src/common/: common.rs
src/server_emul/: server_emul.rs
