[package]
name = "collector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "collector"
path = "src/collector/collector.rs"

[[bin]]
name = "server_emul"
path = "src/server_emul/server_emul.rs"

[dependencies]
protobuf = "2.25.*"
structopt = "0.3.*"
netlink-sys = "0.*.*"
neli = "0.5.3"

[build-dependencies]
protoc-rust = "2.25.*"